# RecursiveRealArithmetic

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build-format-and-run-tests.sh  build_and_run_tests.sh
include/: RecursiveRealArithmetic.h  utils.h
src/: RecursiveRealArithmetic.cpp  utils.cpp
tests/: CMakeLists.txt  test_RecursiveRealArithmetic.cpp
